--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "Afec starter kit for students",
     "main": "js/theme.js",
     "scripts": {
-        "build": "NODE_ENV=production webpack --progress",
+        "build": "cross-env NODE_ENV=production webpack --progress",
         "watch": "webpack --progress --watch",
         "scss-lint": "stylelint \"**/*.scss\" --formatter verbose",
         "scss-fix": "stylelint \"**/*.scss\" --fix"
@@ -29,6 +29,7 @@
         "webpack-license-plugin": "^4.5.1"
     },
     "dependencies": {
-        "swiper": "^11.2.6"
+        "@tailwindcss/vite": "^4.1.3",
+        "tailwindcss": "^4.1.3"
     }
 }
