--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "webpack-license-plugin": "^4.5.1"
   },
   "dependencies": {
-    "cross-env": "^7.0.3"
+    "cross-env": "^7.0.3",
+    "swiper": "^11.2.8"
   }
 }
