--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "Afec starter kit",
   "main": "js/theme.js",
   "scripts": {
-    "build": "cross-env NODE_ENV=production webpack --progress",
+    "build": "npm install && cross-env NODE_ENV=production webpack --mode production --progress --colors",
     "watch": "webpack --progress --watch",
+    "start": "nodemon server/server.js",
+    "dev": "cross-env NODE_ENV=development webpack serve --mode development --open --hot --port 8080",
     "scss-lint": "stylelint \"**/*.scss\" --formatter verbose",
     "scss-fix": "stylelint \"**/*.scss\" --fix"
   },
@@ -25,6 +27,7 @@
     "globals": "^16.1.0",
     "mini-css-extract-plugin": "^2.9.2",
     "nodemon": "^3.1.10",
+    "nyc": "^17.1.0",
     "postcss-loader": "^8.1.1",
     "sass": "^1.85.1",
     "sass-loader": "^16.0.5",
@@ -42,6 +45,7 @@
     "cross-env": "^7.0.3",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "jest": "^30.1.1",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.3",
     "swiper": "^11.2.8"
