--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "cross-env": "^7.0.3",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "helmet": "^8.1.0",
     "jest": "^30.1.1",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.3",
