--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "express": "^5.1.0",
     "helmet": "^8.1.0",
     "jest": "^30.1.1",
+    "joi": "^18.0.1",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.3",
     "swiper": "^11.2.8"
