--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "jest": "^30.1.1",
     "joi": "^18.0.1",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
     "mysql2": "^3.14.3",
     "swiper": "^11.2.8"
   },
